dataBase connection & services products

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "Jwt": {
+    "Key": "examplecllkeyauthorizationforhs256bearertoken",
+    "Issuer": "CCL",
+    "Audience": "inventory",
+    "ExpireMinutes": 60
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "backCCLContext": "Host=localhost;Port=5432;Username=postgres;Password=example;Database=InventoryDB"
+  }
 }
